# tossinvest

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: .env.example  .gitignore  Dockerfile  docker-compose.yml
docs/claude/: pytossinvest-mcp.md  pytossinvest-sdk.md  tossinvest-mcp.md  tossinvest-open-api.md
docs/images/: architecture.diagram.html  order-flow.diagram.html  safety-model.diagram.html
docs/superpowers/plans/: 2026-06-17-mcp-safety-accounting.md  2026-06-17-pytossinvest-sdk.md  2026-06-17-safety-hardening.md  2026-06-17-tossinvest-mcp-server.md  2026-06-18-paper-state-externalization.md  2026-06-18-remote-transport-auth.md  2026-06-18-safety-state-externalization.md  2026-06-18-sdk-ratelimit-resilience.md  2026-06-24-paper-currency-aware.md
docs/superpowers/specs/: 2026-06-17-mcp-safety-accounting-design.md  2026-06-17-tossinvest-mcp-design.md  2026-06-18-sdk-ratelimit-resilience-design.md  2026-06-18-self-host-remote-mcp-design.md  2026-06-24-paper-currency-aware-design.md
examples/: README.md  mcp_paper_demo.py  sdk_quickstart.py
pytossinvest/: LICENSE  README.md  pyproject.toml
pytossinvest-mcp/: NOTICE  README.md  pyproject.toml
pytossinvest-mcp/src/pytossinvest_mcp/: audit.py  config.py  http.py  paper.py  redis_stores.py  safety.py  server.py  stores.py  tools.py
pytossinvest-mcp/tests/: conftest.py  test_audit.py  test_backend_parity.py  test_config.py  test_http.py  test_market_hours.py  test_paper.py  test_paper_redis.py  test_safety_guardrails.py  test_safety_reserve.py  test_safety_tokens.py  test_server_modes.py  test_smoke.py  test_stores_memory.py  test_stores_redis.py  test_tools_read.py  test_tools_write.py  test_transport.py
pytossinvest/src/pytossinvest/: __init__.py  auth.py  client.py  errors.py  models.py  money.py  ratelimit.py
pytossinvest/tests/: test_auth.py  test_client_core.py  test_client_endpoints.py  test_errors.py  test_models.py  test_money.py  test_ratelimit.py  test_smoke.py
tossinvest-mcp/: LICENSE  README.md  pyproject.toml
tossinvest-mcp/src/tossinvest_mcp/: audit.py  config.py  market_hours.py  paper.py  safety.py  server.py  tools.py
tossinvest-mcp/tests/: conftest.py  test_audit.py  test_config.py  test_market_hours.py  test_paper.py  test_safety_guardrails.py  test_safety_tokens.py  test_server_modes.py  test_smoke.py  test_tools_read.py  test_tools_write.py
