[project]
name = "pytossinvest"
version = "0.0.2"
description = "Unofficial Python client for the Toss Securities Open API"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = ["httpx>=0.27", "pydantic>=2.7"]

[project.optional-dependencies]
dev = ["pytest>=8", "respx>=0.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pytossinvest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
