[project]
name = "tossinvest-mcp"
version = "0.0.1"
description = "MCP server giving an LLM safe read/trade access to a Toss Securities account (unofficial)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "pytossinvest",
    "mcp>=1.12",
    "pydantic-settings>=2",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
tossinvest-mcp = "tossinvest_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tossinvest_mcp"]

[tool.uv.sources]
pytossinvest = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
